# fen4

./: Cargo.toml  README.md
src/: conversions.rs  display.rs  from_str.rs  lib.rs  types.rs
tests/: basic.rs  chess960.rs
