[package]
name = "fen4"
version = "0.6.0"
authors = ["Benjamin Landers <benjaminrlanders@gmail.com>"]
edition = "2018"
description = "A parser and writer for the fen4 file format used by Chess.com for 4 player chess games"
license = "MIT"
repository="https://github.com/TheThirdOne/fen4/"

[dependencies]
thiserror = "1.0"
